--- a/configs/configs.json
+++ b/configs/configs.json
@@ -3,6 +3,8 @@
 	"jqlForProjects":"project = doublequoteFIRSTdoublequote",
 	"jira_user":"Testatlassian1@mailinator.com",
 	"dont_tell":"VdC8jd0Dj7VL0Jh8Qbz72A5B",
-	"fieldsNeeded":"key,created,summary,updated,status,customfield_10030,customfield_10029,customfield_10031"
+	"fieldsNeeded":"key,created,summary,updated,status,customfield_10030,customfield_10029,customfield_10031",
+	"maxResults": "1000",
+        "formatOutput": "Y"
 	
 }
