--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+#spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:file:../webapps/EnvironmentsDashboard/jirappsDB
+#spring.datasource.url=jdbc:h2:file:./environmentsDashboardDB
 server.port=9052
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.username=jiradashboard
+spring.datasource.password=admForjiradashboard
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.h2.console.path=/jirappstoolsdb
+logging.file.name=../logs/jiraPPS.log
+logging.file.path=../logs/
+spring.jiraconfigfile=../webapps/EnvironmentsDashboard/configs/configs.json
+#spring.jiraconfigfile=./configs/configs.json
+spring.h2.console.settings.web-allow-others=true
+
+#https://www.baeldung.com/spring-boot-h2-database
