--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,18 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.6</version>
+		<version>2.6.7</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.jira</groupId>
 	<artifactId>jirarestclient</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>jirarestclient</name>
+	<name>EnvironmentsDashboard</name>
 	<description>Jira Rest Client</description>
+    <packaging>war</packaging>
 	<properties>
 		<java.version>8</java.version>
+        <start-class>com.jira.jirarestclient.JirarestclientApplication</start-class>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -22,6 +24,12 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency> 
+        
 		<!-- https://mvnrepository.com/artifact/com.mashape.unirest/unirest-java -->
 		<dependency>
 		    <groupId>com.mashape.unirest</groupId>
@@ -32,6 +40,15 @@
 		    <groupId>com.googlecode.json-simple</groupId>
 		    <artifactId>json-simple</artifactId>
 		    <version>1.1.1</version>
+		</dependency>
+        <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -46,6 +63,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+            
 		</plugins>
 	</build>
 	<repositories>
